--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "setup": "sequelize db:migrate && sequelize db:seed:all",
     "start": "node ./bin/www"
   },
   "dependencies": {
